GNOME Bugzilla – Bug 771759
The inhibit dialog may show null description, reason and id
Last modified: 2016-11-18 15:22:45 UTC
Created attachment 335982 [details] End Session Dialog's With unknown description Sometimes when I logout I the inhibit dialog of the end-session-dialog module is shown but I only see null as the name of the program that is blocking the session ending. I have attached a screenshot that shows the problem.
When you see this problem again do this: - close logout dialog - open terminal - gnome-flashback --replace - try to logout Post warnings/error if any.
I confirm this problem. It usually happens for me with Qt4 applications. It can be easily reproduced by opening vlc, then open the logout dialog. While the logout dialog opens, gnome-session sends a signal to applications, which causes Qt4 applications exits immediately for some reason. So there is a race condition. Here is the output of gnome-flashback: ** (gnome-flashback:1251): WARNING **: Failed to get Inhibitor app id: GDBus.Error:org.freedesktop.DBus.Error.UnknownMethod: No such interface 'org.gnome.SessionManager.Inhibitor' on object at path /org/gnome/SessionManager/Inhibitor8