end-session-dialog: ignore invalid inhibitor

https://bugzilla.gnome.org/show_bug.cgi?id=771759